# lutrisSGDB

./: bun.lockb  package.json  tailwind.config.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/: Image.svelte  ImageCard.svelte  ThreeStateSwitch.svelte  index.ts  localstore.svelte.ts
src/routes/: +layout.server.ts  +page.svelte  data.svelte.ts
src/routes/images/: +page.svelte
