[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
rusqlite = { version = "0.32.0", features = ["bundled"] }
home = "0.5.9"
tauri-plugin-http = "2.0.0"
reqwest = { version = "0.10", features = ["blocking"] }
anyhow-tauri = "1.0.0"
anyhow = "1.0.94"
imagesize = "0.13.0"
